# FaceAPI

./: .env.example  .gitignore  FACE_API_COMPLETE_REPORT.md  FACE_RECOGNITION_README.md  GITHUB_RELEASE.md  README.md  comprehensive_test.py  download_models.py  gradio.sh  install.sh  main.py  pyproject.toml  requirements.txt  setup_python310.sh  start.sh  verify_installation.py
examples/: face_recognition_demo.py
faceapi/: __init__.py  cli.py  core.py  face_recognition.py  gradio_app.py  server.py  simple_database.py  utils.py
